fix horizontal scrolling issue

--- a/src/Component/AboutUsSection/about-us-section.module.scss
+++ b/src/Component/AboutUsSection/about-us-section.module.scss
@@ -333,8 +333,19 @@
         }
       }
     }
-  }
 
+    .truckDescription {
+      margin-top: 67px;
+      margin-bottom: 67px;
+      position: relative;
+      left: -12.5%;
+  
+      .truckImage {
+        width: 100vw;
+        margin-left: 0;
+      }
+    }
+  }
 }
 
 @media (min-aspect-ratio: 4 / 3) {
